--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,25 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
 
 {% block content %}
-<h1>Test</h1>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-black">
+                Taste of Africa
+            </h1>
+            <div class="my-5">
+                <h4 href=""  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
