--- a/templates/base.html
+++ b/templates/base.html
@@ -46,10 +46,10 @@
         <div class="row">
             <div class="col-6 my-auto py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0">Taste of Africa</h2>
+                    <h2 class="logo-font text-black">Taste of Africa</h2>
                 </a>
             </div>
-            <div class="col-6 my-auto py-lg-0">
+            <div class="col-6 my-auto py-lg-0" id="top-icons">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -86,6 +86,15 @@
                         </a>
                     </li>
                 </ul>
+    </div>
+</div>
+    <div class="row justify-content-center">
+            <nav class="nav">
+                <a class="nav-link font-weight-bold text-black" href="#">Mains</a>
+                <a class="nav-link font-weight-bold text-black" href="#">Sides</a>
+                <a class="nav-link font-weight-bold text-black" href="#">Drinks</a>
+                <a class="nav-link font-weight-bold text-black" href="#">Contact</a>
+              </nav>
     </div>
     </header>
 
