Create products template

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid fixed-top bg-white">
         <div class="row">
             <div class="col-6 my-auto py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -90,7 +90,7 @@
 </div>
     <div class="row justify-content-center">
             <nav class="nav">
-                <a class="nav-link font-weight-bold text-black" href="#">Mains</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'mains' %}">Mains</a>
                 <a class="nav-link font-weight-bold text-black" href="#">Sides</a>
                 <a class="nav-link font-weight-bold text-black" href="#">Drinks</a>
                 <a class="nav-link font-weight-bold text-black" href="#">Contact</a>
