--- a/templates/base.html
+++ b/templates/base.html
@@ -91,8 +91,8 @@
     <div class="row justify-content-center">
             <nav class="nav">
                 <a class="nav-link font-weight-bold text-black" href="{% url 'mains' %}">Mains</a>
-                <a class="nav-link font-weight-bold text-black" href="#">Sides</a>
-                <a class="nav-link font-weight-bold text-black" href="#">Drinks</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'sides' %}">Sides</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'drinks' %}">Drinks</a>
                 <a class="nav-link font-weight-bold text-black" href="#">Contact</a>
               </nav>
     </div>
