--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
                 Bringing authentic African food straight to your door!
             </h1>
             <div class="my-5">
-                <h4 href=""  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</h4>
+                <h4 href="{% url 'mains' %}"  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</h4>
             </div>
         </div>
     </div>
