Create add to bag functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,6 +53,12 @@ header {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
 .order-now-button:hover,
 .order-now-button:active,
 .order-now-button:focus,
