Add quantity boxes to shopping bag page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,6 +77,11 @@ header {
     border: 1px solid black !important;
 }
 
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
