Combine mains, sides and drinks views into a single function

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'mains' %}"  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</a>
+                    <a href="{% url 'category_view' 1 %}"  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</a>
                 </h4>
             </div>
         </div>
