--- a/templates/base.html
+++ b/templates/base.html
@@ -91,9 +91,9 @@
 </div>
     <div class="row justify-content-center">
             <nav class="nav">
-                <a class="nav-link font-weight-bold text-black" href="{% url 'mains' %}">Mains</a>
-                <a class="nav-link font-weight-bold text-black" href="{% url 'sides' %}">Sides</a>
-                <a class="nav-link font-weight-bold text-black" href="{% url 'drinks' %}">Drinks</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 1 %}">Mains</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 2 %}">Sides</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 3 %}">Drinks</a>
                 <a class="nav-link font-weight-bold text-black" href="#">Contact</a>
               </nav>
     </div>
