--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -104,7 +104,7 @@
                     </tr>
                     <tr>
                         <td colspan="5" class="text-right">
-                            <a href="{% url 'mains' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                            <a href="{% url 'category_view' 1 %}" class="btn btn-outline-black rounded-0 btn-lg">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
