--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -33,7 +33,7 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'mains' %}">Cancel</a>
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'category_view' 1 %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Add Product</button>
                     </div>
                 </form>
