--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -66,7 +66,7 @@
                         </div>
 
                         <div class="col-12">
-                            <a href="{% url 'mains' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'category_view' 1 %}" class="btn btn-outline-black rounded-0 mt-5">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
