--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,6 +28,21 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
+                {% if request.user.is_authenticated %}
+    <form action="{% url 'toggle_favourite' product.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-outline-primary">
+            {% if product in request.user.favourites.all %}
+                Remove from Favorites
+            {% else %}
+                Add to Favorites
+            {% endif %}
+        </button>
+    </form>
+{% else %}
+    <a href="{% url 'login' %}" class="btn btn-outline-primary">Login to Favorite</a>
+{% endif %}
+
                 <p class="mb-0">{{ product.name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                 {% if request.user.is_superuser %}
