Create Contact Us model, view and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                 <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 1 %}">Mains</a>
                 <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 2 %}">Sides</a>
                 <a class="nav-link font-weight-bold text-black" href="{% url 'category_view' 3 %}">Drinks</a>
-                <a class="nav-link font-weight-bold text-black" href="#">Contact</a>
+                <a class="nav-link font-weight-bold text-black" href="{% url 'contact_us' %}">Contact</a>
               </nav>
     </div>
     </header>
