--- a/products/templates/products/favourites.html
+++ b/products/templates/products/favourites.html
@@ -17,12 +17,12 @@
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <a href="{% url 'product_detail' product.id %}">
-                                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                                <img src="{{ product.image.url }}" class="card-img-top pics" alt="{{ product.name }}">
                             </a>
                             <div class="card-body">
                                 <h5 class="card-title">{{ product.name }}</h5>
                                 <p class="card-text">${{ product.price }}</p>
-                                <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Product</a>
+                                <a href="{% url 'product_detail' product.id %}" class="btn btn-black rounded-0 text-uppercase mt-5">View Product</a>
                             </div>
                         </div>
                     </div>
