Style view favourites link

--- a/products/templates/products/favourites.html
+++ b/products/templates/products/favourites.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="container">
-        <h2>My Favorites</h2>
+        <h2>My Favourites</h2>
         {% if favourite_products %}
             <div class="row">
                 {% for product in favourite_products %}
