--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,13 +6,17 @@ html {
 }
 
 body {
-    height: calc(100vh - 185px);
+    height: calc(100vh - 245px);
     color: black;
     font-family: "Newsreader", serif;
 }
 
 header {
     padding-top: 15px;
+}
+
+.header-container {
+    padding-top: 245px;
 }
 
 #top-icons {
@@ -171,10 +175,11 @@ header {
     }
   }
 
-  /* ?? */
-@media (min-width: 992px) {
+  /* Push main content down on mefium screens and up*/
+@media (min-width: 768px) {
     .header-container {
-        padding-top: 185px;
+        height: 175px;
+        padding-top: 175px;
     }
 }
 
