--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -15,8 +15,8 @@
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'home' %}" 
-                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
-                                Return to home page
+                            class="order-now-button btn-lg rounded-0 text-uppercase py-3">
+                                Return to homepage
                         </a>
                     </h4>
                 </div>
