--- a/products/templates/products/contact_us.html
+++ b/products/templates/products/contact_us.html
@@ -15,7 +15,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Send Message</button>
+        <button type="submit" class="btn btn-black rounded-0 text-uppercase mt-1">Send Message</button>
     </form>
 </div>
 {% endblock %}
