--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,11 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
         <div class="col">
-            <h2 class="logo-font mb-4">Shopping Bag</h2>
+            <h2 class="logo-font text-center mt-3 mb-4">Shopping Bag</h2>
             <hr>
         </div>
     </div>
