--- a/products/templates/products/contact_us.html
+++ b/products/templates/products/contact_us.html
@@ -10,7 +10,10 @@
 
 {% block content %}
 <div class="container">
-    <h2>Contact Us</h2>
+    <div class="col text-center mt-3">
+        <h2 class="logo-font">Contact Us</h2>
+        <hr class="w-50 mb-1">
+    </div>
     <hr>
     <form method="post">
         {% csrf_token %}
