--- a/products/templates/products/favourites.html
+++ b/products/templates/products/favourites.html
@@ -10,7 +10,10 @@
 
 {% block content %}
     <div class="container">
-        <h2>My Favourites</h2>
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Favourites</h2>
+            <hr class="w-50 mb-1">
+        </div>
         {% if favourite_products %}
             <div class="row">
                 {% for product in favourite_products %}
