--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,8 @@
             </h3>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'category_view' 1 %}"  class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</a>
+                    <a href="{% url 'category_view' 1 %}"
+                        class="order-now-button btn-lg rounded-0 text-uppercase py-3">Order Now</a>
                 </h4>
             </div>
         </div>
