Add link to facebook page

--- a/products/templates/products/contact_us.html
+++ b/products/templates/products/contact_us.html
@@ -20,5 +20,9 @@
         {{ form|crispy }}
         <button type="submit" class="btn btn-black rounded-0 text-uppercase mt-1">Send Message</button>
     </form>
+    <h3>
+        Find us on <a href="https://www.facebook.com/profile.php?id=61570981971969" target="_blank"
+          aria-label="Go to our Facebook page (opens in new tab)">Facebook</a>
+    </h3>
 </div>
 {% endblock %}
