--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="e-commerce website for Taste of Africa">
-    <meta name="keywords" content="restaurant, African, food, delivery, african cuisine">
+    <meta name="keywords"
+        content="restaurant, African, food, delivery, african cuisine, african food delivery, order african food online, taste of africa">
     <meta name="author" content="Towbie Idowu">
     {% endblock %}
 
